--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Exportar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Exportar.cshtml
@@ -80,31 +80,31 @@
                 <div class="col-24 col-lg-16 col-xl-12">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Endereço")</label>
-                        <input type="text" id="Endereco" name="Endereco" placeholder="@T("Digite o Endereço")" required class="form-control">
+                        <input type="text" id="endereco" name="endereco" placeholder="@T("Digite o Endereço")" required class="form-control">
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-lg-8 col-xl-6">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Complemento")</label>
-                        <input type="text" id="Complemento" name="Complemento" placeholder="@T("Digite o Complemento")" class="form-control">
+                        <input type="text" id="complemento" name="complemento" placeholder="@T("Digite o Complemento")" class="form-control">
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-lg-8 col-xl-6">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Bairro")</label>
-                        <input type="text" id="Bairro" name="Bairro" placeholder="@T("Digite o Bairro")" required class="form-control">
+                        <input type="text" id="bairro" name="bairro" placeholder="@T("Digite o Bairro")" required class="form-control">
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-lg-8 col-xl-6">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Cidade")</label>
-                        <input type="text" id="Cidade" name="Cidade" placeholder="@T("Digite a Cidade")" required class="form-control">
+                        <input type="text" id="cidade" name="cidade" placeholder="@T("Digite a Cidade")" required class="form-control">
                     </div>
                 </div>
                 <div class="col-24 col-sm-12 col-lg-8 col-xl-6">
                     <div class="form-group">
                         <label for="" class="form-label">@T("Estado")</label>
-                        <select id="Estado" name="Estado" required class="form-control">
+                        <select id="estado" name="estado" required class="form-control">
                             <option value="">@T("Selecione")</option>
                             @foreach (var item in estado)
                             {
