--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/PopupConfirmacao.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/PopupConfirmacao.cshtml
@@ -9,7 +9,7 @@
             </div>
             <div class="modal-body">
                 <div class="mensagemModal"  style="display:none;"></div>
-                @T("Deseja confirmar o agendamento?")
+                <div class="mensagemPadraoJQ">@T(" Deseja confirmar o agendamento?")</div>
                 <span class="gridJQ"></span>
             </div>
             <div class="modal-footer">
