--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCargaDTA.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportarCargaDTA.cshtml
@@ -446,7 +446,7 @@
     });
 
     $('#modalPopupConfirmacao').on("click", function () {
-        $(".gridJQ .table").remove();
+        return false;
     });
 
     function exibirListagemCargas(model) {
