--- a/CMSv4/Templates/email-erro-movidesk.html
+++ b/CMSv4/Templates/email-erro-movidesk.html
@@ -29,7 +29,8 @@
                     <tr>
                         <td style="padding:10px; color: #5b5b5b; font: normal 11px Arial, Helvetica, sans-serif;">
                             Houve uma falha na integração com o Movidesk [[email]]. <br />
-                            O ticket será reintegrado assim que possível.
+                            O ticket será reintegrado assim que possível.<br />
+                            [[json]]
                         </td>
                     </tr>
                 </table>
