--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
@@ -30,7 +30,7 @@
                 <div class="col-24 col-md-12">
                     <div class="form-group">
                         <label for="nome" class="form-label">@T("Nome Completo")</label>
-                        <input type="text" class="form-control" required name="Nome" id="nome" placeholder="@T("Digite o nome do responsavel pela contratação")" value="">
+                        <input type="text" class="form-control" required name="Nome" id="nome" placeholder="@T("Digite o nome do responsável pela contratação")" value="">
                     </div>
                 </div>
                 <div class="col-24 col-md-12">
