--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarSucesso.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarSucesso.cshtml
@@ -3,7 +3,7 @@
 <div class="box-agendamento box-agendamento--success sucessoJQ">
     <h2 class="success-title">@T("Solicitação de agendamento efetuada com sucesso!")</h2>
     <p>
-        @T("Gentileza notar que o envio da solicitação não garante a confirmação do agendamento. Nossa equipe de customer care analisará a solicitação e reverterá em breve")
+        @T("Gentileza notar que o envio da solicitação não garante a confirmação do agendamento. Nossa equipe de customer care analisará a solicitação e reverterá em breve.")
     </p>
     <a href="/agendamento-imd/agendamento-imd" class="btn btn-red btn-lg reloadJQ">@T("Retorne à tela inicial")</a>
 </div>
