--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
@@ -218,11 +218,11 @@
                   NumeroBooking: $("#NumeroBooking").val(),
                   CEP: $("#CEP").val(),
                   CNPJ: $("#CNPJ").val(),
-                  Endereco: $("#Endereco").val(),
-                  Complemento: $("#Complemento").val(),
-                  Bairro: $("#Bairro").val(),
-                  Cidade: $("#Cidade").val(),
-                  Estado: $("#Estado").val(),
+                  Endereco: $("#endereco").val(),
+                  Complemento: $("#complemento").val(),
+                  Bairro: $("#bairro").val(),
+                  Cidade: $("#cidade").val(),
+                  Estado: $("#estado").val(),
                   Html: $("#divRegistrosCargas").html(),
                   Tipo: $("#Tipo").val()
               },
